@@ -1,0 +1,8 @@
+{
+  "dumpTagMap": false,
+  "dumpDuplicates": false,
+  "dumpUnification": false,
+  "dumpOverview": false,
+  "dumpRecipes": false,
+  "dumpUncoveredRecipes": false
+}
