@@ -1,0 +1,7 @@
+{
+  "dumpTagMap": false,
+  "dumpDuplicates": false,
+  "dumpUnification": false,
+  "dumpOverview": false,
+  "dumpRecipes": false
+}
