@@ -1,0 +1,33 @@
+{
+  "ignoredRecipeTypes": [
+    "cucumber:shaped_tag"
+  ],
+  "ignoredRecipes": [],
+  "defaultDuplicateRules": {
+    "ignoredFields": [
+      "conditions",
+      "category",
+      "group"
+    ],
+    "rules": {
+      "cookingtime": "HigherRule",
+      "energy": "HigherRule",
+      "experience": "HigherRule"
+    },
+    "shouldSanitize": false
+  },
+  "overrideDuplicateRules": {
+    "minecraft:crafting_shaped": {
+      "ignoredFields": [
+        "pattern",
+        "conditions",
+        "category",
+        "key",
+        "group"
+      ],
+      "rules": {},
+      "shouldSanitize": false
+    }
+  },
+  "strictMode": false
+}
