@@ -1,4 +1,3 @@
 {
-  "server_only": false,
-  "world_gen_unification": false
+  "serverOnly": false
 }
