@@ -1,0 +1,124 @@
+{
+  "modPriorities": [
+    "minecraft",
+    "kubejs",
+    "crafttweaker",
+    "create",
+    "supplementaries",
+    "farmersdelight",
+    "thermal",
+    "immersiveengineering",
+    "mekanism",
+    "moremekanismprocessing",
+    "ae2",
+    "extendedcrafting",
+    "pamshc2crops",
+    "gtceu"
+  ],
+  "stoneStrata": [
+    "stone",
+    "nether",
+    "deepslate",
+    "granite",
+    "diorite",
+    "andesite"
+  ],
+  "tags": [
+    "forge:nuggets/{material}",
+    "forge:dusts/{material}",
+    "forge:gears/{material}",
+    "forge:gems/{material}",
+    "forge:ingots/{material}",
+    "forge:raw_materials/{material}",
+    "forge:ores/{material}",
+    "forge:plates/{material}",
+    "forge:rods/{material}",
+    "forge:wires/{material}",
+    "forge:storage_blocks/{material}",
+    "forge:storage_blocks/raw_{material}",
+    "forge:crops/{material}",
+    "forge:seeds/{material}",
+    "forge:{material}"
+  ],
+  "materials": [
+    "aeternium",
+    "aluminum",
+    "amber",
+    "andesite_alloy",
+    "apatite",
+    "bitumen",
+    "brass",
+    "bronze",
+    "cabbage",
+    "certus_quartz",
+    "charcoal",
+    "chrome",
+    "cinnabar",
+    "coal",
+    "coal_coke",
+    "cobalt",
+    "constantan",
+    "copper",
+    "diamond",
+    "electrum",
+    "elementium",
+    "emerald",
+    "enderium",
+    "end_stone",
+    "flax",
+    "fluorite",
+    "gold",
+    "graphite",
+    "honey",
+    "invar",
+    "iridium",
+    "iron",
+    "lapis",
+    "lead",
+    "lumium",
+    "manasteel",
+    "mithril",
+    "netherite",
+    "nickel",
+    "niter",
+    "obsidian",
+    "onion",
+    "osmium",
+    "peridot",
+    "platinum",
+    "potassium_nitrate",
+    "quartz",
+    "rice",
+    "ruby",
+    "sapphire",
+    "signalum",
+    "silicon",
+    "silver",
+    "spinach",
+    "steam",
+    "steel",
+    "sulfur",
+    "terrasteel",
+    "tin",
+    "titanium",
+    "tomato",
+    "tungsten",
+    "uranium",
+    "wood",
+    "zinc"
+  ],
+  "priorityOverrides": {},
+  "customTags": {},
+  "tagOwnerships": {},
+  "itemTagInheritanceMode": "ALLOW",
+  "itemTagInheritance": {},
+  "blockTagInheritanceMode": "ALLOW",
+  "blockTagInheritance": {},
+  "ignoredTags": [],
+  "ignoredItems": [],
+  "ignoredRecipeTypes": [
+    "cucumber:shaped_tag"
+  ],
+  "ignoredRecipes": [],
+  "itemsHidingJeiRei": true
+}
