@@ -882,3 +882,4 @@
 [05Mar2025 15:24:37.622] [Render thread/DEBUG] [mixin/]: jade.mixins.json:StringRenderOutputMixin from mod jade->@Inject::jade$init(Lnet/minecraft/client/gui/Font;Lnet/minecraft/client/renderer/MultiBufferSource;FFIZLorg/joml/Matrix4f;Lnet/minecraft/client/gui/Font$DisplayMode;ILorg/spongepowered/asm/mixin/injection/callback/CallbackInfo;)V doesn't use it's CallbackInfo
 [05Mar2025 15:24:37.622] [Render thread/DEBUG] [mixin/]: jade.mixins.json:StringRenderOutputMixin from mod jade->@Inject::jade$init(Lnet/minecraft/client/gui/Font;Lnet/minecraft/client/renderer/MultiBufferSource;FFIZLorg/joml/Matrix4f;Lnet/minecraft/client/gui/Font$DisplayMode;ILorg/spongepowered/asm/mixin/injection/callback/CallbackInfo;)V has 0 override(s) in child classes
 [05Mar2025 15:24:37.623] [Render thread/DEBUG] [mixin/]: jade.mixins.json:StringRenderOutputMixin from mod jade->@Inject::jade$init(Lnet/minecraft/client/gui/Font;Lnet/minecraft/client/renderer/MultiBufferSource;FFIZLorg/joml/Matrix4f;Lnet/minecraft/client/gui/Font$DisplayMode;ILorg/spongepowered/asm/mixin/injection/callback/CallbackInfo;)V won't be passed a CallbackInfo as a result
+[05Mar2025 15:25:51.647] [Render thread/INFO] [net.minecraft.client.Minecraft/]: Stopping!
